Fixed confusion of days 2019/18, added X for open menu and fixed navbar alignment issues.

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -5,12 +5,12 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     width: 100%;
-    padding: 0 60px;
+    padding: 30px 150px;
     z-index: 3;
 }
 .navbar__logo{
-    width: 251px;
-    height: 63px;
+    width: 196px;
+    height: 50px;
     margin-top: 16px;
 }
 .navbar__navigation{
@@ -23,11 +23,11 @@
     color: #FFFFFF;
     font-family: "Fuse V.2 Display";
     font-weight: bold;
-    font-size: 20px;
+    font-size: 17px;
     text-transform: uppercase;
 }
 .navigation__button{
-    padding: 16px;
+    padding: 16px 8px;
 }
 .navigation__button--full > a{
     background-color: #30CEC2;
@@ -40,13 +40,18 @@
 .navigation__icons{
     display: none;
 }
+@media screen and (max-width: 1240px){
+    .navbar{
+        padding: 0 30px;
+    }
+}
 @media screen and (max-width: 1024px){
     .navbar__navigation{
         display: none;
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: #2C373F;
+        background-color: #1F3C44;
     }
     .navigation__hamburger{
         display: block;
@@ -54,6 +59,17 @@
         width: 50px;
         margin-top: 25px;
         margin-right: 15px;
+    }
+    div.navigation__hamburger--clicked span:nth-child(1){
+        transform: rotate(-45deg);
+        margin: 5px 0 -7% 0;
+    }
+    div.navigation__hamburger--clicked span:nth-child(2){
+        display: none;
+    }
+    div.navigation__hamburger--clicked span:nth-child(3){
+        transform: rotate(45deg);
+        margin: 0;
     }
     .hamburger__span{
         display: block;
@@ -68,7 +84,7 @@
         display: flex;
         flex-direction: column;
         margin: 0;
-        padding: 30% 30%;
+        padding: 25% 30%;
         top: 0;
         left: 0;
     }
@@ -76,25 +92,25 @@
         display: none;
     }
     .navigation__button{
-        padding: 15% 0;
+        padding: 5% 0;
         text-align: center;
     }
     .navigation__button--full > a{
         width: fit-content;
-        border-radius: 45px;
-        padding: 20px 45px;
+        border-radius: 5px;
+        padding: 15px 25px;
         font-weight: 600;
         letter-spacing: 1px;
         text-transform: uppercase !important;
     }
     .navigation__button > a{
-        font-size: 60px;
+        font-size: 28px;
         text-transform: capitalize;
     }
     .navbar--show .navigation__hamburger{
         position: absolute;
-        right: 60px;
-        top: 0;
+        right: 30px;
+        top: 30px;
         z-index: 5;
     }
     .navbar--show{
@@ -107,48 +123,42 @@
         top: 0;
         left: 0;
     }
-    .navigation__icons{
-        display: flex;
-        justify-content: space-around;
-    }
-    .navigation__icons img{
-        filter: invert(50%);
+    .navbar__logo{
+        margin-top: 25px;
     }
 }
 @media screen and (max-width: 768px){
     .navigation__button > a{
-        font-size: 30px;
+        font-size: 24px;
         text-transform: capitalize;
-    }
-    .navigation__icons img{
-        width: 50px;
     }
 }
 @media screen and (max-width: 500px){
+    div.navigation__hamburger--clicked span:nth-child(1){
+        transform: rotate(-45deg);
+        margin: 5px 0 -5% 0;
+    }
     .navbar{
-        background-color: #1d9b90;
+        background-color: #1F3C44;
         padding: 2%;
     }
-    .navbar__logo{
-        width: 125px;
-        height: 31px;
-        margin-top: 8px;
-    }
+     .navbar__logo{
+        margin-top: 0;
+    } 
     .navigation__hamburger{
         margin: 8px 8px 0 0;
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
+    }
+    .hamburger__span{
+        height: 9%;
     }
     .navbar--show .navigation__hamburger{
-        right: 9px;
-        top: 9px;
+        right: 10px;
+        top: 20px;
     }
-    .navigation__button > a{
-        font-size: 15px;
-        text-transform: capitalize;
-    }
-    .navigation__icons img{
-        width: 30px;
+    .navbar--show .navbar__navigation {
+        padding: 25% 20%;
     }
     .navigation__button--full > a{
         border-radius: 22.5px;
